# getting-started

./: .cruft.json  .dockerignore  .env  .gitignore  Dockerfile  README.md  config.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
app/: models.py
app/components/: ChatMessage.html  ChatRoom.jpy  CreateRoomModal.jpy  PostMessageForm.jpy
app/pages/: index.jpy
tests/: conftest.py
