[project]
name = "hyperflask_app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "hyperflask >=0.2.1",
    "flask-dramatiq",
    "periodiq",
    "hyperflask-users>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-flask>=1.3.0",
    "ruff>=0.12.4",
    #"docker-web-deploy >=0.1"
]

[tool.uv.sources]
flask-dramatiq = { git = "https://gitlab.com/bersace/flask-dramatiq" }
periodiq = { git = "https://gitlab.com/bersace/periodiq" }
